--- a/styles.css
+++ b/styles.css
@@ -175,3 +175,14 @@ footer {
     font-weight: bold;
     font-size: 1.2rem;
 }
+
+@media only screen and (max-width: 400px) {
+    .logo img {
+        display: none;
+    }
+    .main-logo {
+        width:300px;
+        height: 300px;
+        
+        }
+}
